[gd_scene format=3 uid="uid://cu4oe0glqoe3n"]

[ext_resource type="Script" uid="uid://cf882nsaygiqx" path="res://entities/player/player.gd" id="1_0vkxb"]
[ext_resource type="Texture2D" uid="uid://cdxh5heh7nv7l" path="res://entities/enemies/Red_team_enemy/red_archer/Archer_Red.png" id="2_yd65k"]
[ext_resource type="Script" uid="uid://cp1bttswj4kyr" path="res://entities/player/player_input.gd" id="3_fwqlb"]
[ext_resource type="Script" uid="uid://bbbdey83bbgf8" path="res://scripts/characters/movement_component.gd" id="4_1arhi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_674bt"]
radius = 18.027756

[sub_resource type="Animation" id="Animation_mxi64"]
length = 0.001

[sub_resource type="Animation" id="Animation_uovkd"]
resource_name = "attack_down_1"
length = 0.60001004
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_jeibo"]
resource_name = "attack_down_2"
length = 0.60001004
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_rug40"]
resource_name = "attack_horizontal_1"
length = 0.60001004
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_3mip4"]
resource_name = "attack_horizontal_2"
length = 0.60001004
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_nsdob"]
resource_name = "attack_up_1"
length = 0.60001004
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41]
}

[sub_resource type="Animation" id="Animation_yceh7"]
resource_name = "attack_up_2"
length = 0.60001004
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_insbl"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_fdrta"]
resource_name = "run"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rug40"]
_data = {
&"RESET": SubResource("Animation_mxi64"),
&"attack_down_1": SubResource("Animation_uovkd"),
&"attack_down_2": SubResource("Animation_jeibo"),
&"attack_horizontal_1": SubResource("Animation_rug40"),
&"attack_horizontal_2": SubResource("Animation_3mip4"),
&"attack_up_1": SubResource("Animation_nsdob"),
&"attack_up_2": SubResource("Animation_yceh7"),
&"idle": SubResource("Animation_insbl"),
&"run": SubResource("Animation_fdrta")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3mip4"]
animation = &"attack_up_1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_insbl"]
animation = &"attack_horizontal_1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rug40"]
animation = &"attack_horizontal_1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mxi64"]
animation = &"attack_down_1"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_nsdob"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3mip4")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_insbl")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_rug40")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_mxi64")
blend_point_3/pos = Vector2(0, 1)
blend_mode = 1

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_3mip4"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_yceh7"]
graph_offset = Vector2(-563.3106, 55.46367)
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_nsdob")
nodes/BlendSpace2D/position = Vector2(-130, 130)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_3mip4")
nodes/TimeScale/position = Vector2(90, 130)
node_connections = [&"output", 0, &"TimeScale", &"TimeScale", 0, &"BlendSpace2D"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fdrta"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_674bt"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3mip4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_insbl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rug40"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mxi64"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nsdob"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yceh7"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_mxi64"]
states/Start/position = Vector2(200.5, 100.125)
states/attack/node = SubResource("AnimationNodeBlendTree_yceh7")
states/attack/position = Vector2(519.04285, 258.14236)
states/idle/node = SubResource("AnimationNodeAnimation_fdrta")
states/idle/position = Vector2(395, 99.9375)
states/run/node = SubResource("AnimationNodeAnimation_674bt")
states/run/position = Vector2(623.5, 99.875)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_3mip4"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_insbl"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_rug40"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_mxi64"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_nsdob"), "run", "attack", SubResource("AnimationNodeStateMachineTransition_yceh7")]
graph_offset = Vector2(-214.45718, 64.142365)

[node name="Player" type="CharacterBody2D" unique_id=762456616 node_paths=PackedStringArray("input_component", "movement_component")]
script = ExtResource("1_0vkxb")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")

[node name="PlayerSprite" type="Sprite2D" parent="." unique_id=1715619646]
texture_filter = 1
position = Vector2(0, -33)
texture = ExtResource("2_yd65k")
hframes = 6
vframes = 8
frame = 1

[node name="MovementCollider" type="CollisionShape2D" parent="." unique_id=1326847303]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_674bt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=94841206]
libraries/ = SubResource("AnimationLibrary_rug40")

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=384298539]
active = false
tree_root = SubResource("AnimationNodeStateMachine_mxi64")
anim_player = NodePath("../AnimationPlayer")
parameters/attack/BlendSpace2D/blend_position = Vector2(0.0034207106, 1.009434)
parameters/attack/TimeScale/scale = 1.0

[node name="InputComponent" type="Node" parent="." unique_id=1896382726]
script = ExtResource("3_fwqlb")
metadata/_custom_type_script = "uid://cp1bttswj4kyr"

[node name="MovementComponent" type="Node" parent="." unique_id=1384660000 node_paths=PackedStringArray("body")]
script = ExtResource("4_1arhi")
body = NodePath("..")
metadata/_custom_type_script = "uid://bbbdey83bbgf8"

[node name="AttackCooldown" type="Timer" parent="." unique_id=1596294524]
wait_time = 0.6
one_shot = true

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
